# trace_parser

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_QUICKSTART.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  INHERITANCE_PLAN.md  OPTIMIZATIONS.md  PROC_MACRO_TASK.md  PROJECT.md  QWEN.md  README.md  pyproject.toml
.cursor/rules/: trace-parser-agent.mdc
.github/workflows/: ci.yml  commitlint.yml  coverage.yml  release.yml
.qwen/: PLAN.md
benches/: .gitignore  aosp_benchmark.py  benchmark.py  can_be_parsed.rs  extract_aosp_ftrace.py  generate_test_trace.py  test_parse_benchmark.py  throughput.rs  trace_pure_py.py
datasets/aosp/: README.md
examples/: basic_usage.py  typing_demo.py
macros/: AGENTS.md  Cargo.toml  QWEN.md
macros/examples/: basic_event.md  choice.md  custom_field_name.md  custom_regex.md  fast_match.md  format.md  multiple_templates.md  optional_fields.md  trace_enum.md  tracing_mark_event.md
macros/src/: attrs.rs  enum_gen.rs  generator.rs  lib.rs  pymethods.rs  stub_gen.rs
python/trace_parser/: __init__.py  __init__.pyi  frequency.py  frequency.pyi  sched_process_exit.py  sched_process_exit.pyi  sched_switch.py  sched_switch.pyi  sched_wakeup.py  sched_wakeup.pyi  trace.py  trace.pyi
python/trace_parser/tracing_mark/: __init__.py  base.py  base.pyi  receive_vsync.py  receive_vsync.pyi
scripts/: gen_stubs.py
src/: base_parser.rs  common.rs  format_registry.rs  frequency.rs  lib.rs  payload_template.rs  registry.rs  sched_process_exit.rs  sched_switch.rs  sched_wakeup.rs  trace.rs  trace_exit.rs  tracing_mark_registry.rs
src/tracing_mark/: base.rs  begin.rs  end.rs  mod.rs  receive_vsync.rs
tests/python/: test_benchmark.py  test_parse_file.py  test_parse_smoke.py  test_stubs.py  test_trace_exit.py
trace_parser/: __init__.py  __init__.pyi  _native.pyi
trace_parser/tracing_mark/: __init__.pyi  base.pyi  receive_vsync.pyi
