[package]
name = "trace_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "trace_parser"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.22", features = ["abi3-py310"] }
regex = "1.10"

[[bench]]
name = "can_be_parsed"
harness = false
