[workspace]
members = [
    ".",
    "macros",
]

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[package]
name = "trace_parser"
version = "0.2.0"
edition = "2024"

[lib]
name = "trace_parser"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
inventory = "0.3"
lexical-core = { version = "1.0", features = ["parse"] }
memchr = "2.7"
pyo3 = { version = "0.28", features = ["abi3-py310"] }
regex = "1.12"

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "can_be_parsed"
harness = false
