[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "trace_parser"
version = "0.2.0"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.maturin]
module-name = "trace_parser._native"
features = ["extension-module"]
generate-stub-files = true
